--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     as College students, in Mathematics and Physics for over 10 years.
   </p>
   <p>
-    Since 2018, I have been teaching Mathematics and Physics at the <a href="http://rudolfsteiner.com">Rudolf Steiner School</a> on the
+    Since 2018, I have been teaching Mathematics and Physics at the <a href="http://steiner.edu">Rudolf Steiner School</a> on the
     Upper East Side.
   </p>
   <p>
