--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -10,7 +10,7 @@
             150 }}
             <div class="review-footer mt-3">
               <span class="author">
-                Mulan Ashwin <br>
+                First Name Last Name <br>
                 11th grade at the LFNY
               </span>
               <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
