Collapse and mailto

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
             <i class="fa fa-user"></i>
           </div>
           <div class="colorlib-text">
-            <p><a href="#">stephane.cedroni@gmail.com</a></p>
+            <p><a href="mailto:stephane.cedroni@gmail.com">stephane.cedroni@gmail.com</a></p>
           </div>
         </div>
 
