--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,22 +16,22 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#about">About</a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link js-scroll-trigger active" href="#education">Experience</a>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#skills">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#education">Education</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#reviews">Reviews</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#reviews">Reviews</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
