--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,9 +5,9 @@
     <div class="feature-content">
       <h4>Test Prep</h4>
       <p>
-        <ul>
-          <li>SAT, ACT</li>
-          <li>GMAT, GRE</li>
+        <ul class="fa-ul">
+          <li><span class="fa-li" ><i class="far fa-check-square"></i></span>SAT, ACT</li>
+          <li><span class="fa-li" ><i class="far fa-check-square"></i></span>GMAT, GRE</li>
         </ul>
       </p>
     </div>
@@ -18,10 +18,10 @@
     <div class="feature-content">
       <h4>High School</h4>
       <p>
-        <ul>
-          <li>Mathematics</li>
-          <li>Physics</li>
-          <li>French Baccalauréat S/ES</li>
+        <ul class="fa-ul">
+          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>Mathematics</li>
+          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>Physics</li>
+          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>French Baccalauréat S/ES</li>
         </ul>
       </p>
     </div>
