--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,8 @@
   <h3>About</h3>
   <br>
   <p>
-    Hi, <br> I am passionate about education and teaching. I have been tutoring students from 6th to 12th grade, as well
+    Hi, <br>
+    <br> I am passionate about education and teaching. I have been tutoring students from 6th to 12th grade, as well
     as College students, in Mathematics and Physics for over 10 years.
   </p>
   <p>
