--- a/_includes/education.html
+++ b/_includes/education.html
@@ -7,8 +7,8 @@
         <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/g9iw6ygu0ugkxr9/polytechnique_1.jpg" alt="..."
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
-          <div style="font-size: 20px">Ecole Polytechnique</div>
-          <div style="font-size: 16px; color: #999">Master's Degree</div>
+          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
+          <div style="font-size: 16px; font-weight: 500; color: #999">Master's Degree</div>
           <div style="font-size: 16px; color: #999">Applied Mathematics</div>
         </div>
       </div>
@@ -20,8 +20,8 @@
         <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/00jsvb9mk07ld6b/pNEFXL._SX425_.jpg" alt="..."
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
-          <div style="font-size: 20px">Columbia University</div>
-          <div style="font-size: 16px; color: #999">Master's Degree</div>
+          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
+          <div style="font-size: 16px; font-weight: 500; color: #999">Master's Degree</div>
           <div style="font-size: 16px; color: #999">Operations Research</div>
         </div>
       </div>
@@ -33,8 +33,8 @@
         <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/ths2mctn34bcnk3/LLG_logo.png" alt="..."
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
-          <div style="font-size: 20px">Lycée Louis-Le-Grand</div>
-          <div style="font-size: 16px; color: #999">Classes Préparatoires MP/MP* et Lycée</div>
+          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
+          <div style="font-size: 16px; font-weight: 500; color: #999">Classes Préparatoires MP/MP* et Lycée</div>
           <div style="font-size: 16px; color: #999">Bac S Mention TB</div>
         </div>
       </div>
