--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -10,8 +10,7 @@
             150 }}
             <div class="review-footer mt-3">
               <span class="author">
-                First Name Last Name <br>
-                11th grade at the LFNY
+                First Name Last Name <br> 11th grade at the LFNY
               </span>
               <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
                 read more
@@ -29,7 +28,7 @@
             150 }}
             <div class="review-footer mt-3">
               <span class="author">
-                Mulan Ashwin
+                First Name Last Name <br> 11th grade at the LFNY
               </span>
               <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
                 read more
@@ -47,7 +46,7 @@
             150 }}
             <div class="review-footer mt-3">
               <span class="author">
-                Mulan Ashwin
+                First Name Last Name <br> 11th grade at the LFNY
               </span>
               <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
                 read more
@@ -65,7 +64,7 @@
             150 }}
             <div class="review-footer mt-3">
               <span class="author">
-                Mulan Ashwin
+                First Name Last Name <br> 11th grade at the LFNY
               </span>
               <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
                 read more
