--- a/css/_formkeep.scss
+++ b/css/_formkeep.scss
@@ -9,7 +9,7 @@ form.wj-contact textarea[type="text"] {
   font-weight: lighter;
   border-style: solid;
   /* border-color: #444; */
-  outline-color: #2e83e6;
+  outline-color: $primary;
   border-width: 1px;
   border-radius: 3px;
   transition: box-shadow .2s ease;
@@ -19,9 +19,9 @@ form.wj-contact textarea[type="text"] {
 form.wj-contact input[type="submit"] {
   outline: none;
   color: white;
-  background-color: #2e83e6;
+  background-color: $primary;
   border-radius: 3px;
-  padding: 0.5em;
+  padding: 0.5em 1.5em;
   margin: 0.25em 0 0 0;
   border: 1px solid transparent;
   height: auto;
