--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,11 @@
 @import 'bootstrap/bootstrap';
 @import "variables";
 
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 body {
-  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  // font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Poppins', sans-serif;
   padding-top: 54px;
   color: #868e96;
 }
@@ -26,6 +29,23 @@ h6 {
   color: #343a40;
 }
 
+p {
+  font-weight: 300;
+}
+
+.fa-ul li { 
+  font-weight: 300;
+  i {
+    color: $primary;
+    font-size: 15px
+  }
+  .fa-check-circle {
+    font-size: 17px
+  }
+}
+.progress {
+  height: 0.5rem;
+}
 // body {
 //   background: #f9f9fb;
 // }
@@ -57,6 +77,9 @@ h6 {
 @media (min-width: 48em) {
   .content {
     font-size: 16px;
+  }
+  .numbers {
+    margin-top: -5rem;
   }
 }
 @media (min-width: 58em) {
@@ -121,8 +144,10 @@ h6 {
   border-radius: 50%;
   font-size: 25px;
   // border: 1px solid #EBEBEB;
-  border: 1px solid #64a19d;
-  color: #64a19d;
+  // border: 1px solid #64a19d;
+  // color: #64a19d;
+  border: 1px solid $primary;
+  color: $primary;
 }
 .feature-content {
   padding-left: 100px;
@@ -153,14 +178,14 @@ h6 {
 }
 
 .colorlib-feature.colorlib-feature-sm .colorlib-icon i {
-  color: #2c98f0;
+  color: $primary;
   font-size: 30px;
 }
 
 .colorlib-feature .colorlib-icon i {
   display: table-cell;
   vertical-align: middle;
-  color: #2c98f0;
+  color: $primary;
   font-size: 60px;
   height: 100px;
 }
