--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,29 +1,52 @@
 <section class="resume-section d-block" id="skills" style="border-bottom: 1px solid #eee">
-  <h3 style="margin-top: 0px;margin-bottom: 40px; ">Teaching Skills & Education</h3>
-  <div class="feature">
-    <i class="feature-icon far fa-list-alt"></i>
-    <div class="feature-content">
-      <h4>Test Prep</h4>
-      <p>
-        <ul class="fa-ul">
-          <li><span class="fa-li" ><i class="far fa-check-square"></i></span>SAT, ACT</li>
-          <li><span class="fa-li" ><i class="far fa-check-square"></i></span>GMAT, GRE</li>
-        </ul>
-      </p>
+  <h3 style="margin-top: 0px;margin-bottom: 40px; ">Teaching Skills</h3>
+  <div class="container p-0">
+    <div class="row">
+      <div class="col-md-6">
+          <div class="feature">
+              <i class="feature-icon far fa-list-alt"></i>
+              <div class="feature-content">
+                <h4>Test Prep</h4>
+                <p>
+                  <ul class="fa-ul" style="margin-left: 1.5em">
+                    <li><span class="fa-li" ><i class="far fa-check"></i></span>SAT, ACT</li>
+                    <li><span class="fa-li" ><i class="far fa-check"></i></span>GMAT, GRE</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            <br>
+            <div class="feature">
+              <i class="feature-icon fas fa-user-graduate"></i>
+              <div class="feature-content">
+                <h4>High School</h4>
+                <p>
+                  <ul class="fa-ul" style="margin-left: 1.5em">
+                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>Mathematics</li>
+                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>Physics</li>
+                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>French Baccalauréat S/ES</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+      </div>
+      
+      <div class="col-md-5 offset-md-1">
+        <div class="card numbers">
+          <div class="card-body">
+            <h4>2018 in numbers</h4>
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 12px">BAC ES students</span></div>
+            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">SAT students</span></div>
+            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">11th grade/1ère S</span></div>
+            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">10th grade/2nde</span></div>
+            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <br>
-  <div class="feature">
-    <i class="feature-icon fas fa-user-graduate"></i>
-    <div class="feature-content">
-      <h4>High School</h4>
-      <p>
-        <ul class="fa-ul">
-          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>Mathematics</li>
-          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>Physics</li>
-          <li><span class="fa-li" ><i class="fas fa-arrow-right"></i></span>French Baccalauréat S/ES</li>
-        </ul>
-      </p>
-    </div>
-  </div>
+  
 </section>
