--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,9 @@
 <section class="resume-section d-column" id="about" style="border-bottom: 1px solid #eee">
-  <h3>About</h3>
-  <br>
+  <div class="section-title-container">
+    <span class="section-title">About</h3>
+  </div>
   <p>
-    Hi, <br>
-    <br> I am passionate about education and teaching. I have been tutoring students from 6th to 12th grade, as well
+    I am passionate about education and teaching. I have been tutoring students from 6th to 12th grade, as well
     as College students, in Mathematics and Physics for over 10 years.
   </p>
   <p>
