--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,41 +1,46 @@
 <section class="resume-section" id="education" style="border-bottom: 1px solid #eee">
   <!-- <h3 style="margin-top: 40px;margin-bottom: 40px;">Education</h3> -->
-  <h3 style="margin-top: 0px;margin-bottom: 40px;">Education</h3>
-  <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
-    <div class="card-body">
-      <div style="display: flex; flex-direction: row;">
-        <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/g9iw6ygu0ugkxr9/polytechnique_1.jpg" alt="..."
-          class="img-thumbnail rounded-circle profile-image">
-        <div style="margin-left: 30px">
-          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
-          <div style="font-size: 16px; font-weight: 500; color: #999">Master's Degree</div>
-          <div style="font-size: 16px; color: #999">Applied Mathematics</div>
-        </div>
-      </div>
-    </div>
+  <div class="section-title-container">
+    <span class="section-title">Education</h3>
   </div>
+
   <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
     <div class="card-body">
       <div style="display: flex; flex-direction: row;">
         <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/00jsvb9mk07ld6b/pNEFXL._SX425_.jpg" alt="..."
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
-          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
-          <div style="font-size: 16px; font-weight: 500; color: #999">Master's Degree</div>
-          <div style="font-size: 16px; color: #999">Operations Research</div>
+          <div class="school">Columbia University</div>
+          <div class="degree">Master's Degree</div>
+          <div class="subject">Operations Research</div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
+    <div class="card-body">
+      <div style="display: flex; flex-direction: row;">
+        <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/g9iw6ygu0ugkxr9/polytechnique_1.jpg" alt="..."
+          class="img-thumbnail rounded-circle profile-image">
+        <div style="margin-left: 30px">
+          <div class="school">Ecole Polytechnique</div>
+          <div class="degree">Master's Degree</div>
+          <div class="subject">Applied Mathematics</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="card shadow-sm" style="border-radius: 0; margin-bottom: 10px">
     <div class="card-body">
       <div style="display: flex; flex-direction: row;">
         <img style="width: 80px; height: 80px;" src="https://dl.dropboxusercontent.com/s/ths2mctn34bcnk3/LLG_logo.png" alt="..."
           class="img-thumbnail rounded-circle profile-image">
         <div style="margin-left: 30px">
-          <div style="font-size: 20px"><h5 class="m-0">Columbia University</h5></div>
-          <div style="font-size: 16px; font-weight: 500; color: #999">Classes Préparatoires MP/MP* et Lycée</div>
-          <div style="font-size: 16px; color: #999">Bac S Mention TB</div>
+          <div class="school">Lycée Louis-Le-Grand</div>
+          <div class="degree">Classes Préparatoires MP/MP* et Lycée</div>
+          <div class="subject">Bac S Mention TB</div>
         </div>
       </div>
     </div>
