--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -1,2 +1,4 @@
-// $primary: #8d021f; // burgundy
+// // $primary: #8d021f; // burgundy
 $primary: #415A77;
+// $text-gray-darker: #495057;
+// $text-gray: #868e96;
