--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,7 @@
 <section class="resume-section" id="contact" style="border-bottom: 1px solid #eee">
-  <h3 style="margin-top: 0px;margin-bottom: 40px;">Contact</h3>
+  <div class="section-title-container">
+    <span class="section-title">Contact</h3>
+  </div>
   <div class="container p-0">
     <div class="row">
       <div class="col-md-5">
@@ -14,10 +16,10 @@
 
         <div class="colorlib-feature colorlib-feature-sm animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
           <div class="colorlib-icon">
-            <i class="fa fa-map"></i>
+            <i class="fas fa-map-marker-alt"></i>
           </div>
           <div class="colorlib-text">
-            <p>205 East 85th Street, New York NY 10028</p>
+            <p>Upper East Side, New York NY 10028</p>
           </div>
         </div>
 
