--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,6 +33,9 @@
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact">Contact</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#faq">FAQ</a>
+        </li>
     </ul>
   </div>
 </nav>
