--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,13 +1,17 @@
 <section class="resume-section" id="reviews" style="border-bottom: 1px solid #eee">
-  <h3 style="margin-top: 0px;margin-bottom: 40px;">Reviews</h3>
+  <div class="section-title-container">
+    <span class="section-title">Reviews</h3>
+  </div>
   <div class="container p-0">
     <div class="row">
       <div class="col-md-6 mb-4">
         <div class="card shadow-sm">
           <div class="card-body p-4">
+            <div class="review-content">
             {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
             odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
             150 }}
+            </div>
             <div class="review-footer mt-3">
               <span class="author">
                 First Name Last Name <br> 11th grade at the LFNY
@@ -23,9 +27,11 @@
       <div class="col-md-6 mb-4">
         <div class="card shadow-sm">
           <div class="card-body p-4">
+            <div class="review-content">
             {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
             odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
             150 }}
+            </div>
             <div class="review-footer mt-3">
               <span class="author">
                 First Name Last Name <br> 11th grade at the LFNY
@@ -41,9 +47,11 @@
       <div class="col-md-6 mb-4">
         <div class="card shadow-sm">
           <div class="card-body p-4">
+            <div class="review-content">
             {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
             odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
             150 }}
+            </div>
             <div class="review-footer mt-3">
               <span class="author">
                 First Name Last Name <br> 11th grade at the LFNY
