--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,5 +1,7 @@
 <section class="resume-section d-block" id="skills" style="border-bottom: 1px solid #eee">
-  <h3 style="margin-top: 0px;margin-bottom: 40px; ">Teaching Skills</h3>
+  <div class="section-title-container">
+    <span class="section-title">Skills</h3>
+  </div>
   <div class="container p-0">
     <div class="row">
       <div class="col-md-6">
