--- a/css/main.scss
+++ b/css/main.scss
@@ -4,11 +4,12 @@
 @import 'bootstrap/bootstrap';
 @import "variables";
 
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Karla:100,200,300,400,500,600,700";
+// @import "https://fonts.googleapis.com/css?family=Poppins:100,200, 300,400,500,600,700";
 
 body {
   // font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Karla', sans-serif;
   padding-top: 54px;
   color: #868e96;
 }
@@ -26,15 +27,67 @@ h3,
 h4,
 h5,
 h6 {
-  color: #343a40;
+  // color: #343a40;
+  color: $gray-700;
 }
 
 p {
-  font-weight: 300;
+  // font-weight: 200;
 }
 
+#accordion {
+  .card {
+    border-radius: 0;
+  }
+  .card-body {
+    font-size: 16px;
+  }
+}
+.navbar-brand {
+
+}
+
+#about {
+  p {
+    text-align: justify;
+    font-weight: 300;
+    // color: rgba(0,0,0,0.7);
+    color: $gray-600;
+    // color: #343a40;
+  }
+}
+
+.section-title-container{
+  margin-bottom: 3.5rem;
+}
+.section-title {
+  border-bottom: 2px solid $primary;
+  font-size: 25px;
+  padding-bottom: 0.5rem;
+  text-transform: uppercase;
+}
+
+.school {
+  font-size: 20px;
+  color: $gray-700;
+}
+.degree {
+  font-size: 16px;
+  color: $gray-600;
+}
+.subject {
+  font-size: 16px;
+  color: $gray-600;
+}
+
+.feature h4 {
+  color: $gray-700;
+}
 .fa-ul li { 
   font-weight: 300;
+  color: $gray-600;
+  // color: lighten(#000, 25%);
+  // color: lighten(#343a40, 15%);
   i {
     color: $primary;
     font-size: 15px
