--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
     and overall confidence.
   </p>
   <p>
-    I live with my wife Eléonore and my son Henri on the Upper East Side.
+    I live with my wife Eléonore and our baby boy Henri on the Upper East Side.
   </p>
   <p>
     Please reach out with any questions you might have. I look forward to hearing from you and working together.
