--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -8,14 +8,14 @@
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link">
-            Where do the classes take place?
+            Where do the lessons take place?
           </button>
         </h5>
       </div>
 
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
-          The classes take place at my apartment, in the upper east side.
+          The first lesson always takes place at your home so that I can meet with the parents afterwards to give my first impressions on their child & explain what my plan is moving forward. Afterwards, I give all of my lessons at my home office.
         </div>
       </div>
     </div>
@@ -24,32 +24,43 @@
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            How long is a tutoring session?
+            How long is a lesson?
           </button>
         </h5>
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
         <div class="card-body">
-          A tutoring session lasts 2 hours. Over the years I have observed that a 2-hour slot is ideal for maximizing learning.
+          A lesson lasts 2 hours. Over the years I have observed that a 2-hour slot is ideal for maximizing learning.
         </div>
       </div>
     </div>
+
     <div class="card mb-3" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Question 3
+            Do you offer skype lessons?
           </button>
         </h5>
       </div>
       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
         <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-          non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-          aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
-          craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
-          occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-          labore sustainable VHS.
+          Yes I do offer skype lessons. Please contact me for more information about them.
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-3" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+      <div class="card-header" id="headingFour">
+        <h5 class="mb-0">
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            What is your hourly rate?
+          </button>
+        </h5>
+      </div>
+      <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+        <div class="card-body">
+          For all questions regarding my rates and payments please contact me directly (see section above).
         </div>
       </div>
     </div>
