--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,9 +27,9 @@
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#education">Education</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#reviews">Reviews</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact">Contact</a>
       </li>
