--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -37,14 +37,16 @@
         <div class="card numbers">
           <div class="card-body">
             <h4>2018 in numbers</h4>
-            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 12px">BAC ES students</span></div>
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">BAC ES students</span></div>
             <div class="progress"><div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">SAT students</span></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">SAT students</span></div>
             <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">11th grade/1ère S</span></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">11th grade/1ère S students</span></div>
             <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 12px">10th grade/2nde</span></div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">10th grade/2nde students</span></div>
             <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">9th grade/3ème students</span></div>
+            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
           </div>
         </div>
       </div>
