--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
   <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css"> -->
   <link rel="stylesheet" href="/css/main.css">
   <!-- <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}"> -->
+  {% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
