--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,52 +5,72 @@
   <div class="container p-0">
     <div class="row">
       <div class="col-md-6">
-          <div class="feature">
-              <i class="feature-icon far fa-list-alt"></i>
-              <div class="feature-content">
-                <h4>Test Prep</h4>
-                <p>
-                  <ul class="fa-ul" style="margin-left: 1.5em">
-                    <li><span class="fa-li" ><i class="far fa-check"></i></span>SAT, ACT</li>
-                    <li><span class="fa-li" ><i class="far fa-check"></i></span>GMAT, GRE</li>
-                  </ul>
-                </p>
-              </div>
-            </div>
-            <br>
-            <div class="feature">
-              <i class="feature-icon fas fa-user-graduate"></i>
-              <div class="feature-content">
-                <h4>High School</h4>
-                <p>
-                  <ul class="fa-ul" style="margin-left: 1.5em">
-                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>Mathematics</li>
-                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>Physics</li>
-                    <li><span class="fa-li" ><i class="fas fa-check"></i></span>French Baccalauréat S/ES</li>
-                  </ul>
-                </p>
-              </div>
-            </div>
+        <div class="feature">
+          <i class="feature-icon far fa-list-alt"></i>
+          <div class="feature-content">
+            <h4>Test Prep</h4>
+            <p>
+              <ul class="fa-ul" style="margin-left: 1.5em">
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>SAT, ACT</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>GMAT, GRE</li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <br>
+        <div class="feature">
+          <i class="feature-icon fas fa-user-graduate"></i>
+          <div class="feature-content">
+            <h4>High School</h4>
+            <p>
+              <ul class="fa-ul" style="margin-left: 1.5em">
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>Mathematics</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>Physics</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>French Baccalauréat S/ES</li>
+              </ul>
+            </p>
+          </div>
+        </div>
       </div>
-      
+
       <div class="col-md-5 offset-md-1">
         <div class="card numbers">
           <div class="card-body">
-            <h4>2018 in numbers</h4>
-            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">BAC ES students</span></div>
-            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">SAT students</span></div>
-            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">11th grade/1ère S students</span></div>
-            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">10th grade/2nde students</span></div>
-            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
-            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">9th grade/3ème students</span></div>
-            <div class="progress"><div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="66%" aria-valuemin="0" aria-valuemax="100"></div></div>
+            <h4>2019 in numbers</h4>
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">BAC ES
+                students</span></div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">SAT students</span>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">11th grade/1ère S
+                students</span></div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">10th grade/2nde
+                students</span></div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">9th grade/3ème
+                students</span></div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="66%" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+
 </section>
