--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,15 +7,17 @@
     as College students, in Mathematics and Physics for over 10 years.
   </p>
   <p>
-    Since 2018, I have been teaching Mathematics and Physics at the <a href="http://steiner.edu">Rudolf Steiner School</a> on the
+    From 2018 to 2019, I taught Mathematics and Physics at the <a href="http://steiner.edu">Rudolf Steiner School</a> on
+    the
     Upper East Side.
   </p>
   <p>
-    I truly believe that I can make a big difference not only in a child's grades/results but also in his/her working techniques
+    I truly believe that I can make a big difference not only in a child's grades/results but also in his/her working
+    techniques
     and overall confidence.
   </p>
   <p>
-    I live with my wife Eléonore and our baby boy Henri on the Upper East Side.
+    I live with my wife Eléonore, our son Henri and baby girl Chiara on the Upper East Side.
   </p>
   <p>
     Please reach out with any questions you might have. I look forward to hearing from you and working together.
