--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,8 @@
 <section class="resume-section d-column" id="about" style="border-bottom: 1px solid #eee">
+  <div class="mb-4 d-flex justify-content-center align-items-center d-md-none">
+    <img class="img-fluid img-profile rounded-circle w-50"
+      src="https://dl.dropboxusercontent.com/s/abrd1ub9biw7qri/profile2.jpg" alt="">
+  </div>
   <div class="section-title-container">
     <span class="section-title">About</h3>
   </div>
