--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -4,79 +4,30 @@
   </div>
   <div class="container p-0">
     <div class="row">
-      <div class="col-md-6 mb-4">
+      <div class="col-md-12 mb-4">
         <div class="card shadow-sm">
           <div class="card-body p-4">
             <div class="review-content">
-            {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
-            odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
-            150 }}
+              Stéphane Cedroni with his background and experience in and familiarity with the French and the American
+              educational systems is an excellent tutor, especially for those students who are studying in the French
+              educational system and hoping to pursue studies in the American system.
+              He helped prepare our daughter for the math portion of the SAT as well as for the Math 2 SAT subject test.
+              Beside working to improve our daughter's mastery of topics she had studied in the French Lycee curriculum,
+              Stéphane worked with our daughter to make her proficient in certain topics on the SAT subject test that
+              she had not yet come across in school.
+              In addition, he spent time with her working on developing an efficient method and approach to answering
+              SAT questions and dealing with the time constraints and pressure that is part of the standardized testing
+              process (SAT, ACT...). Stéphane quickly built a rapport with our daughter and she enjoyed the sessions.
+              He was insightful and adapted to our daughters learning style. Ultimately, of course, it is results that
+              counts and we were delighted with the excellent SAT and SAT subject scores that our daughter, who was
+              accepted at a top ivy league college, achieved. We unreservedly recommend Stéphane as a tutor to prepare a
+              student for the standardized
+              testing and, more generally, to help their overall understanding of mathematics.
             </div>
             <div class="review-footer mt-3">
               <span class="author">
-                First Name Last Name <br> 11th grade at the LFNY
+                Mulan Ashwin <br> Mother of 11th grader at the LFNY
               </span>
-              <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
-                read more
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 mb-4">
-        <div class="card shadow-sm">
-          <div class="card-body p-4">
-            <div class="review-content">
-            {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
-            odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
-            150 }}
-            </div>
-            <div class="review-footer mt-3">
-              <span class="author">
-                First Name Last Name <br> 11th grade at the LFNY
-              </span>
-              <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
-                read more
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 mb-4">
-        <div class="card shadow-sm">
-          <div class="card-body p-4">
-            <div class="review-content">
-            {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
-            odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
-            150 }}
-            </div>
-            <div class="review-footer mt-3">
-              <span class="author">
-                First Name Last Name <br> 11th grade at the LFNY
-              </span>
-              <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
-                read more
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-6 mb-4">
-        <div class="card shadow-sm">
-          <div class="card-body p-4">
-            {{ "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit sapiente nostrum distinctio illo sunt id quaerat fugit
-            odit temporibus qui modi, sit doloribus praesentium dignissimos optio ipsum, nulla perferendis unde." | truncate:
-            150 }}
-            <div class="review-footer mt-3">
-              <span class="author">
-                First Name Last Name <br> 11th grade at the LFNY
-              </span>
-              <button type="button" class="btn btn-link p-0 read-more" data-toggle="modal" data-target="#exampleModalLong">
-                read more
-              </button>
             </div>
           </div>
         </div>
