--- a/css/_resumeitem.scss
+++ b/css/_resumeitem.scss
@@ -2,19 +2,29 @@ section.resume-section {
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
   max-width: 75rem;
+
   .resume-item {
     .resume-content {}
+
     .resume-date {
       min-width: none;
     }
   }
 }
+
+@media (max-width: 576px) {
+  section.resume-section {
+    padding-top: 2.5rem !important;
+  }
+}
+
 @media (min-width: 768px) {
   section.resume-section {
     // min-height: 100vh;
     max-width: 50rem;
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+
     .resume-item {
       .resume-date {
         min-width: 18rem;
@@ -22,6 +32,7 @@ section.resume-section {
     }
   }
 }
+
 @media (min-width: 992px) {
   section.resume-section {
     padding-top: 3rem !important;
