--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -4,7 +4,8 @@
   </div>
 
   <div id="accordion">
-    <div class="card mb-3" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <div class="card mb-3" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+      aria-controls="collapseOne">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link">
@@ -15,45 +16,37 @@
 
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
-          The first lesson always takes place at your home so that I can meet with the parents afterwards to give my first impressions on their child & explain what my plan is moving forward. Afterwards, I give all of my lessons at my home office.
+          During these difficult times I am only offering online lessons. I have a lot of experience with online classes
+          and use tools such as Google Docs to write everything we need during the session and keep track of our past
+          lessons.
         </div>
       </div>
     </div>
 
-    <div class="card mb-3" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+    <div class="card mb-3" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+      aria-controls="collapseTwo">
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+            aria-controls="collapseTwo">
             How long is a lesson?
           </button>
         </h5>
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
         <div class="card-body">
-          A lesson lasts 2 hours. Over the years I have observed that a 2-hour slot is ideal for maximizing learning.
+          I recommend two 1-hour or two 45-minutes sessions per week. In my experience it’s best for the student’s
+          focus, and helps stay up to date with the class material.
         </div>
       </div>
     </div>
 
-    <div class="card mb-3" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-      <div class="card-header" id="headingThree">
-        <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Do you offer skype lessons?
-          </button>
-        </h5>
-      </div>
-      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-        <div class="card-body">
-          Yes I do offer skype lessons. Please contact me for more information about them.
-        </div>
-      </div>
-    </div>
-
-    <div class="card mb-3" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+    <div class="card mb-3" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true"
+      aria-controls="collapseFour">
       <div class="card-header" id="headingFour">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
+            aria-expanded="false" aria-controls="collapseFour">
             What is your hourly rate?
           </button>
         </h5>
