--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,40 +2,43 @@
   <a class="navbar-brand js-scroll-trigger" href="#page-top">
     <span class="d-block d-lg-none">Stéphane Cedroni</span>
     <span class="d-none d-lg-block">
-      <img
-        class="img-fluid img-profile rounded-circle mx-auto mb-2"
-        src="https://dl.dropboxusercontent.com/s/abrd1ub9biw7qri/profile2.jpg"
-        alt=""
-      >
+      <img class="img-fluid img-profile rounded-circle mx-auto mb-2"
+        src="https://dl.dropboxusercontent.com/s/abrd1ub9biw7qri/profile2.jpg" alt="">
     </span>
   </a>
-  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#about">About</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#about">About</a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link js-scroll-trigger active" href="#education">Experience</a>
       </li> -->
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#skills">Skills</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#skills">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#education">Education</a>
-      </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#reviews">Reviews</a>
-      </li> -->
-      <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact">Contact</a>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#education">Education</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show" href="#faq">FAQ</a>
-        </li>
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#reviews">Reviews</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#contact">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
+          href="#faq">FAQ</a>
+      </li>
     </ul>
   </div>
 </nav>
