Changed Reviews to Testimonials

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
-          href="#reviews">Reviews</a>
+          href="#testimonials">Testimonials</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" data-toggle="collapse" data-target=".navbar-collapse.show"
