--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,6 +1,6 @@
-<section class="resume-section" id="reviews" style="border-bottom: 1px solid #eee">
+<section class="resume-section" id="testimonials" style="border-bottom: 1px solid #eee">
   <div class="section-title-container">
-    <span class="section-title">Reviews</h3>
+    <span class="section-title">Testimonials</h3>
   </div>
   <div class="container p-0">
     <div class="row">
@@ -18,9 +18,9 @@
               In addition, he spent time with her working on developing an efficient method and approach to answering
               SAT questions and dealing with the time constraints and pressure that is part of the standardized testing
               process (SAT, ACT...). Stéphane quickly built a rapport with our daughter and she enjoyed the sessions.
-              He was insightful and adapted to our daughters learning style. Ultimately, of course, it is results that
+              He was insightful and adapted to our daughter's learning style. Ultimately, of course, it is results that
               counts and we were delighted with the excellent SAT and SAT subject scores that our daughter, who was
-              accepted at a top ivy league college, achieved. We unreservedly recommend Stéphane as a tutor to prepare a
+              accepted at a top Ivy League college, achieved. We unreservedly recommend Stéphane as a tutor to prepare a
               student for the standardized
               testing and, more generally, to help their overall understanding of mathematics.
             </div>
