Changed number for students

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,6 +13,9 @@
               <ul class="fa-ul" style="margin-left: 1.5em">
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>SAT, ACT</li>
                 <li><span class="fa-li"><i class="fas fa-check"></i></span>GMAT, GRE</li>
+                <li><span class="fa-li"><i class="fas fa-check"></i></span>SAT Subject Tests<br>
+                  Math Level 1, Level 2 & Physics
+                </li>
               </ul>
             </p>
           </div>
@@ -44,7 +47,7 @@
                 aria-valuemax="100"></div>
             </div>
             <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">BAC S
-                students</span></div>
+                student</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="100" aria-valuemin="0"
                 aria-valuemax="100"></div>
@@ -68,9 +71,15 @@
                 aria-valuemax="100"></div>
             </div>
             <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">9th grade/3ème
-                students</span></div>
+                student</span></div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="50%" aria-valuemin="0"
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="50%" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">8th grade/4ème
+                student</span></div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="50%" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
           </div>
