Changed techniques to habits

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,8 +16,8 @@
     Upper East Side.
   </p>
   <p>
-    I truly believe that I can make a big difference not only in a child's grades/results but also in his/her working
-    techniques
+    I truly believe that I can make a big difference not only in a child's grades/results but also in his/her learning
+    habits
     and overall confidence.
   </p>
   <p>
