--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -40,13 +40,13 @@
         <div class="card numbers">
           <div class="card-body">
             <h4>2019 in numbers</h4>
-            <div class="mt-2"><span style="font-size: 40px">4</span> <span style="font-size: 14px">BAC ES
+            <div class="mt-2"><span style="font-size: 40px">5</span> <span style="font-size: 14px">BAC ES/12th grade
                 students</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
-            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">BAC S
+            <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">BAC S/12th grade
                 student</span></div>
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="100" aria-valuemin="0"
@@ -55,19 +55,19 @@
             <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">SAT students</span>
             </div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="66%" aria-valuemin="0"
+              <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="66%" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
             <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">11th grade/1ère
                 students</span></div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="66%" aria-valuemin="0"
+              <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="66%" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
-            <div class="mt-2"><span style="font-size: 40px">2</span> <span style="font-size: 14px">10th grade/2nde
+            <div class="mt-2"><span style="font-size: 40px">3</span> <span style="font-size: 14px">10th grade/2nde
                 students</span></div>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="66%" aria-valuemin="0"
+              <div class="progress-bar" role="progressbar" style="width: 66%" aria-valuenow="66%" aria-valuemin="0"
                 aria-valuemax="100"></div>
             </div>
             <div class="mt-2"><span style="font-size: 40px">1</span> <span style="font-size: 14px">9th grade/3ème
